--- a/templates/release.html
+++ b/templates/release.html
@@ -9,6 +9,15 @@
     {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
 
+        {#  Show simple about #}
+        <div class="card">
+            <div class="card-body">
+                Based on <a class="link-primary" href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a class="link-primary" href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a class="link-primary" href="https://contabo.com/en/">Contabo</a> servers.<br>
+                If you want to get in touch with me just visit my <a class="link-primary" href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a class="link-primary" href="https://blk8.de">WordPress site</a>.<br>
+                You may also send me a <a href="{{ url_for('show_contact')}}">message</a> here.
+            </div>
+        </div>
+
         {#  Show release information #}
         <div class="card">
             <div class="card-body">
