--- a/templates/room.html
+++ b/templates/room.html
@@ -64,7 +64,7 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                         {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Create World</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Create Room</a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
             {#  Same links implemented using small buttons #}
             <div class="btn-group me-2" role="group" aria-label="Second group">
                 {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                    <a href="#" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-plus-square"></i></a>
+                    <a href="#" class="btn btn-primary mt-4 mb-4" data-toggle="tooltip" title="Create Room" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-plus-square"></i></a>
                 {% endif %}
             </div>
         </div>
