--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -129,23 +129,23 @@
 
             {#  Same links implemented using small buttons #}
             <div class="btn-group me-2" role="group" aria-label="Second group">
-                <a href="{{ url_for('show_worlds') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-list-ul"></i></a>
+                <a href="{{ url_for('show_worlds') }}" data-toggle="tooltip" title="All Worlds" class="btn btn-primary mt-4 mb-4"><i class="bi bi-list-ul"></i></a>
             </div>
             <div class="btn-group me-2" role="group" aria-label="Third group">
                 {% if current_user.creator_id == world.creator_id %}
-                    <a href="#" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i></a>
-                    <a href="{{ url_for('show_switched_world', world_id=world.world_id) }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-globe"></i></a>
-                    <a href="{{ url_for('show_archived_world', world_id=world.world_id) }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-archive"></i></a>
-                    <a href="{{ url_for('show_reduced_world', world_id=world.world_id) }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-chevron-bar-left"></i></a>
+                    <a href="#" class="btn btn-primary mt-4 mb-4" data-toggle="tooltip" title="Edit World" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil"></i></a>
+                    <a href="{{ url_for('show_switched_world', world_id=world.world_id) }}" data-toggle="tooltip" title="Switch Visibility" class="btn btn-primary mt-4 mb-4"><i class="bi bi-globe"></i></a>
+                    <a href="{{ url_for('show_archived_world', world_id=world.world_id) }}" data-toggle="tooltip" title="Archive" class="btn btn-primary mt-4 mb-4"><i class="bi bi-archive"></i></a>
+                    <a href="{{ url_for('show_reduced_world', world_id=world.world_id) }}" data-toggle="tooltip" title="Kringle Mode" class="btn btn-primary mt-4 mb-4"><i class="bi bi-chevron-bar-left"></i></a>
                 {% endif %}
                 {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
-                    <a href="{{ url_for('show_report', world_id=world.world_id, format_type='markdown') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-md"></i></a>
-                    <a href="{{ url_for('show_report', world_id=world.world_id, format_type='pdf') }}" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-html"></i></a>
+                    <a href="{{ url_for('show_report', world_id=world.world_id, format_type='markdown') }}" data-toggle="tooltip" title="Create Report (Markdown)" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-md"></i></a>
+                    <a href="{{ url_for('show_report', world_id=world.world_id, format_type='pdf') }}" data-toggle="tooltip" title="Create Report (HTML)" class="btn btn-primary mt-4 mb-4"><i class="bi bi-filetype-html"></i></a>
                 {% endif %}
             </div>
             <div class="btn-group" role="group" aria-label="Forth group">
                 {% if current_user.creator_id == world.creator_id %}
-                    <a href="#" class="btn btn-danger mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i></a>
+                    <a href="#" class="btn btn-danger mt-4 mb-4" data-toggle="tooltip" title="Delete World" data-bs-toggle="modal" data-bs-target="#myModal_del"><i class="bi bi-trash"></i></a>
                 {% endif %}
             </div>
         </div>
