Improved S3 user storage handling

--- a/templates/image.html
+++ b/templates/image.html
@@ -8,7 +8,7 @@
 
     {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
-        <img src="https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ creator_name }}/{{ filename }}" class="img-fluid rounded-start" alt="Uploaded Image">
+        <img src="https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ section_name }}/{{ folder_name }}/{{ filename }}" class="img-fluid rounded-start" alt="Uploaded Image">
     </div>
 
     {# Display simple button - go back to the file overview page #}
