Improved S3 user storage handling

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                     </ul>
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         {% if current_user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_storage') }}"><i class="bi bi-hdd"></i> Storage</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_storage', section_name='user', folder_name=current_user.creator_name) }}"><i class="bi bi-hdd"></i> Storage</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('show_my_creator') }}"><i class="bi bi-person-fill"></i> My Account</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('show_logout') }}"><i class="bi bi-door-open-fill"></i> Logout</a></li>
                         {% else %}
