--- a/templates/image.html
+++ b/templates/image.html
@@ -13,7 +13,7 @@
 
     {# Display simple button - go back to the file overview page #}
     <div class="container-fluid pb-3 mt-2 mb-2">
-        <a href="{{ url_for('show_storage') }}" class="btn btn-primary mt-4 mb-4">
+        <a href="{{ url_for('show_storage', section_name=section_name, folder_name=folder_name) }}" class="btn btn-primary mt-4 mb-4">
             <i class="bi bi-list-ul"></i> All Files
         </a>
     </div>
