--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -13,7 +13,7 @@
         <div class="card mb-3" style="max-width: 720px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="{{ item.item_img if (item.item_img!='') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Item Image">
+                    <img src="{{ s3_prefix + "/" + item.item_img if (item.item_img!='NoImage') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Item Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -66,7 +66,7 @@
                             </div>
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.image.name }}">{{ form.image.label }}</label>
-                                {{ form.image(size=20, class="form-control") }}
+                                {{ form.image(class="form-select") }}
                             </div>
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.room.name }}">{{ form.room.label }}</label>
