--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -13,7 +13,7 @@
         <div class="card mb-3" style="max-width: 720px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="{{ s3_prefix + "/" + item.item_img if (item.item_img!='NoImage') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Item Image">
+                    <img src="{{ session['s3_prefix'] + "/" + item.item_img if (item.item_img!='NoImage') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Item Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
