--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -44,13 +44,13 @@
                 {{ form1.description(size=40, class="form-control") }}
             </div>
             <div class="form-group mt-2 mb-2">
-                <label for="url">{{ form1.url.label }}</label>
-                {{ form1.url(size=20, class="form-control") }}
+                <label for="url">{{ form1.image.label }}</label>
+                {{ form1.image(class="form-select") }}
             </div>
             {% for error in form1.email.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
-            {% for error in form1.url.errors %}
+            {% for error in form1.image.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
             <button type="submit" class="btn btn-primary mt-4 mb-4">Update</button>
