--- a/templates/world.html
+++ b/templates/world.html
@@ -46,7 +46,7 @@
                             </div>
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.image.name }}">{{ form.image.label }}</label>
-                                {{ form.image(size=20, class="form-control") }}
+                                {{ form.image(class="form-select") }}
                             </div>
                         </form>
                     </div>
