Improved S3 user storage handling

--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -44,7 +44,7 @@
                 {{ form1.description(size=40, class="form-control") }}
             </div>
             <div class="form-group mt-2 mb-2">
-                <label for="url">{{ form1.image.label }}</label>
+                <label for="image">{{ form1.image.label }}</label>
                 {{ form1.image(class="form-select") }}
             </div>
             {% for error in form1.email.errors %}
