--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                 {# Dynamic slides for all worlds #}
                 {% for world in worlds %}
                     <div class="carousel-item">
-                        <a href="{{ url_for('show_world', world_id=world.world_id)}}"><img class="d-block mx-auto" src="{{ world.world_img if (world.world_img!='') else '/static/not_found.jpg' }}" alt="World Logo"></a>
+                        <a href="{{ url_for('show_world', world_id=world.world_id)}}"><img class="d-block mx-auto" src="{{ s3_prefix + "/" + world.world_name + "/" + world.world_img if (world.world_img!='NoImage') else '/static/not_found.jpg' }}" alt="World Logo"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h3>{{ world.world_name }}</h3>
                         </div>
