--- a/templates/error.html
+++ b/templates/error.html
@@ -6,8 +6,18 @@
         <h2>{% block title %} Error {% endblock %}</h2>
     </div>
 
-    {#  Page content #}
-    <div class="container-fluid pb-3 mt-2 mb-2">
-        <b>Oops</b>, you have found a crack in the matrix.
+    {#  Show error message #}
+    <div class="card mb-3" style="max-width: 720px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="/static/victor.png" class="img-fluid rounded-start" alt="Victor">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><b>Oops</b>, you have found a crack in the matrix.</h5>
+                    <p class="card-text">{{ 'Victor says: ' + error_message if error_message else 'Victor says oink.' }}</p>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
