--- a/templates/account.html
+++ b/templates/account.html
@@ -15,14 +15,14 @@
             {{ form.csrf_token }}
             <div class="form-group mt-2 mb-2">
                 <a href="#" data-toggle="tooltip" title="Also used as your login, may not contain spaces"><label for="creator">{{ form.creator.label }}</label></a>
-                {{ form.creator(size=20, class="form-control") }}
+                {{ form.creator(size=20, class="form-control", onkeypress="return event.charCode != 32") }}
             </div>
             {% for error in form.creator.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
             <div class="form-group mt-2 mb-2">
                 <a href="#" data-toggle="tooltip" title="Only used to send notifications about account changes like e-mail address changes"><label for="email">{{ form.email.label }}</label></a>
-                {{ form.email(size=20, class="form-control") }}
+                {{ form.email(size=20, class="form-control", onkeypress="return event.charCode != 32") }}
             </div>
             {% for error in form.email.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
