--- a/templates/solution_my_detail.html
+++ b/templates/solution_my_detail.html
@@ -70,6 +70,10 @@
                 <label class="form-check-label" for="visible">Make solution public</label>
                 <input class="form-check-input" type="checkbox" value="" name="visible" id="visible" {{ 'checked' if (visible==1) }}>
             </div>
+            <div class="form-check">
+                <label class="form-check-label" for="completed">Mark as completed</label>
+                <input class="form-check-input" type="checkbox" value="" name="completed" id="completed" {{ 'checked' if (completed==1) }}>
+            </div>
         </form>
 
         {# Display simple buttons - submit or cancel form editing #}
