--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -59,11 +59,11 @@
                             {{ form.csrf_token }}
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.name.name }}">{{ form.name.label }}</label>
-                                {{ form.name(size=20, class="form-control") }}
+                                {{ form.name(size=20, class="form-control", onkeypress="return event.charCode != 32") }}
                             </div>
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.url.name }}">{{ form.url.label }}</label>
-                                {{ form.url(size=20, class="form-control") }}
+                                {{ form.url(size=20, class="form-control", onkeypress="return event.charCode != 32") }}
                             </div>
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.description.name }}">{{ form.description.label }}</label>
