First stable release. Hooray!!

--- a/templates/release.html
+++ b/templates/release.html
@@ -21,18 +21,20 @@
         {#  Show release information #}
         <div class="card">
             <div class="card-body">
-                <h4 class="mb-3">v1.5 (20220708)</h4>
+                <h4 class="mb-3">v1.0 (20220718)</h4>
+                Some improvements and first stable release<br><br>
+                <h4 class="mb-3">v0.6 (20220708)</h4>
                 New Feature: Simple registration workflow in addition to invitation codes<br><br>
-                <h4 class="mb-3">v1.4 (20220707)</h4>
+                <h4 class="mb-3">v0.5 (20220707)</h4>
                 New Feature: Show progress for (un)solved challenges<br><br>
-                <h4 class="mb-3">v1.3 (20220705)</h4>
+                <h4 class="mb-3">v0.4 (20220705)</h4>
                 New Feature: Distinction between Kringle and non-Kringle themes<br>
                 New Feature: World Archive<br><br>
-                <h4 class="mb-3">v1.2 (20220704)</h4>
+                <h4 class="mb-3">v0.3 (20220704)</h4>
                 New Feature: Upload images to S3 storage via copy &amp; paste<br><br>
-                <h4 class="mb-3">v1.1 (20220701)</h4>
+                <h4 class="mb-3">v0.2 (20220701)</h4>
                 Migrate from Bootstrap 3 to Bootstrap 5<br><br>
-                <h4 class="mb-3">v1.0 (20220630)</h4>
+                <h4 class="mb-3">v0.1 (20220630)</h4>
                 Initial release. Hello World! 😀
             </div>
         </div>
