--- a/templates/login.html
+++ b/templates/login.html
@@ -15,14 +15,14 @@
             {{ form.csrf_token }}
             <div class="form-group mt-2 mb-2">
                 <label for="creator">{{ form.creator.label }}</label>
-                {{ form.creator(size=20, class="form-control", onkeypress="return event.charCode != 32") }}
+                {{ form.creator(size=20, class="form-control", style="max-width: 720px;", onkeypress="return event.charCode != 32") }}
             </div>
             {% for error in form.creator.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
             <div class="form-group mt-2 mb-2">
                 <label for="password">{{ form.password.label }}</label>
-                {{ form.password(size=20, class="form-control") }}
+                {{ form.password(size=20, class="form-control", style="max-width: 720px;") }}
             </div>
             {% for error in form.password.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
