--- a/templates/storage.html
+++ b/templates/storage.html
@@ -105,22 +105,18 @@
 
     {#  Page content #}
     <div class="container-fluid pb-3 mt-2 mb-2">
-
         {#  Javascript anchor and progress bar #}
-        <h4 class="mb-3">Paste your image here</h4>
+        <h4 class="mb-3">Upload your file here</h4>
         <div class="card">
             <div class="card-body">
-                You can paste and upload an image in the clipboard just by pressing ctrl+v on this page.
+                You can paste and upload an image in the clipboard just by pressing ctrl+v on this page. You can use the traditional way below as well.
             </div>
             <div class="progress">
                 <div class="progress-bar" role="progressbar" id="upload_progress" style="width: 1%" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
 
-        <hr class="little mt-4 mb-4">
-
         {#  Traditional upload via file selection form #}
-        <h4 class="mb-3">Upload your file here</h4>
         <form action="{{ url_for('show_storage', section_name=section_name, folder_name=folder_name) }}" method="POST" enctype=multipart/form-data>
             {{ form.csrf_token }}
             <div class="form-group mt-2 mb-2">
