--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <h6 class="font-weight-bold">
+                            <a class="link-dark" href="{{ url_for('show_privacy')}}">Privacy Policy</a><br>
                             <a class="link-dark" href="{{ prefix }}/static/doc/index.html">Open Help</a><br>
                             <a class="link-dark" href="{{ prefix }}/swagger">Show API</a><br>
                             <a class="link-dark" href="{{ url_for('show_contact')}}">Send a Message</a>
