Added standard privacy policy

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -3,7 +3,7 @@
 {% block content %}
     {#  Page header #}
     <div class="container-fluid pb-2 mt-4 mb-2">
-        <h2>{% block title %} Release Notes {% endblock %}</h2>
+        <h2>{% block title %} Privacy Policy {% endblock %}</h2>
     </div>
 
     {#  Page content #}
