--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -59,7 +59,7 @@
                             {{ form.csrf_token }}
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.name.name }}">{{ form.name.label }}</label>
-                                {{ form.name(size=20, class="form-control") }}
+                                {{ form.name(size=20, class="form-control", onkeypress="return event.charCode != 32", readonly=true) }}
                             </div>
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.url.name }}">{{ form.url.label }}</label>
